--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<main class="main">
-  <h1>Test</h1>
+<app-header></app-header>
 
-</main>
+<div>
+  Content
+</div>
 
-
-<router-outlet></router-outlet>
+<app-footer></app-footer>
