Add home page, movie page and routing

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="navigation">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Movies</a></li>
+            <li><a routerLink="/home">Home</a></li>
+            <li><a routerLink="/movie-list">Movies</a></li>
             <li><a href="">TV Shows</a></li>
             <li><a href="">Genres</a></li>
         </ul>
