--- a/src/app/components/slider/slider.component.css
+++ b/src/app/components/slider/slider.component.css
@@ -1,5 +1,6 @@
 .slider .slide {
   width: 100%;
+  position: relative;
 }
 .slider .slide-bg {
   height: 35rem;
@@ -23,14 +24,18 @@
 }
 .slider .slide-info {
   position: absolute;
-  top: 5rem;
-  left: 5rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 0 5rem;
   color: #ffffff;
   font-size: 1.2rem;
+  margin: auto;
 }
 .slider .slide-info .title {
   font-size: 2.5rem;
 }
 .slider .slide-info .meta .pi {
-  color: rgb(255, 213, 0);
+  color: rgb(255, 166, 0);
 }/*# sourceMappingURL=slider.component.css.map */
