--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -1,7 +1,7 @@
 .slider {
     .slide {
             width: 100%;
-
+            position: relative;
         &-bg {
             height: 35rem;
             position: relative;
@@ -26,18 +26,21 @@
 
         &-info {
             position: absolute;
-            top: 5rem;
-            left: 5rem;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            padding: 0 5rem;
             color: #ffffff;
             font-size: 1.2rem;
-
+            margin: auto;
             .title {
                 font-size: 2.5rem;
             }
 
             .meta {
                 .pi {
-                    color: rgb(255, 213, 0);
+                    color: rgb(255, 166, 0);
                 }
                 
             }
