--- a/src/app/components/slider/slider.component.css
+++ b/src/app/components/slider/slider.component.css
@@ -1,6 +1,11 @@
-.slider .slide {
-  width: 100%;
+.slider {
   position: relative;
+  height: 35rem;
+}
+.slider .slide {
+  position: absolute;
+  width: 100%;
+  height: 35rem;
 }
 .slider .slide-bg {
   height: 35rem;
