--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -1,7 +1,10 @@
 .slider {
+    position: relative;
+    height: 35rem;
     .slide {
+            position: absolute;
             width: 100%;
-            position: relative;
+            height: 35rem;
         &-bg {
             height: 35rem;
             position: relative;
