--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,4 +7,11 @@ body {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 14px; //root font size
+    color: #fff;
+    background-color: #121212;
+}
+
+.container {
+    margin: 0.5rem;
+    padding: 0.5rem;
 }
