--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -5,7 +5,7 @@
         <div class="slide" @slideFade>
           <div class="slide-bg">
             <img
-              src="{{ imageUrl + movie.backdrop_path }}"
+              src="{{ imageBaseUrl + '/w1280' + movie.backdrop_path }}"
               alt="{{ movie.title }}"
             />
           </div>
