refactor services code and use RxJS Map for API response

--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,6 +1,6 @@
 @if (movies$ | async; as movies) {
   <div class="slider">
-    @for (movie of movies.results; let movieIndex = $index; track movieIndex) {
+    @for (movie of movies; let movieIndex = $index; track movieIndex) {
       @if (movieIndex === slideIndex) {
         <div class="slide" @slideFade>
           <div class="slide-bg">
