--- a/src/app/components/banner-item/banner-item.component.html
+++ b/src/app/components/banner-item/banner-item.component.html
@@ -4,7 +4,7 @@
     <span>{{ item?.vote_average?.toFixed(1)?.toString() }} / 10 </span>
   </div>
   <div class="item-image">
-    <img src="{{ imageBaseUrl + '/w780' + item?.backdrop_path }}" alt="" />
+    <img src="{{ imageBaseUrl + 'w780' + item?.backdrop_path }}" alt="" />
   </div>
   <div class="item-title">{{ item?.title }}</div>
 </a>
