--- a/src/app/components/banner-item/banner-item.component.scss
+++ b/src/app/components/banner-item/banner-item.component.scss
@@ -39,5 +39,6 @@
         background-color: #212121;
         width: 100%;
         border-radius: 0 0 5px 5px;
+        text-align: center;
     }
 }
